@@ -12,6 +12,7 @@ Comments= <<EOT
 - Add scripts/get.statoids.pl in case we need their FIPS 10-4 codes one day.
 - Add scripts/get.fips.pages.pl and data/List_of_FIPS_region_codes_*.html.
 - Add scripts/populate.fips.pages.pl, data/wikipedia.fips.codes.txt and data/wikipedia.fips.mismatch.log.
+- Update the POD re the new files.
 EOT
 
 [V 1.01]
